[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/DeathMenu.gd" type="Script" id=1]
[ext_resource path="res://Fonts/PressStart2P.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 45
font_data = ExtResource( 2 )

[sub_resource type="DynamicFontData" id=2]
font_path = "res://Fonts/PressStart2P.ttf"

[sub_resource type="DynamicFont" id=3]
size = 36
font_data = SubResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 2 )

[node name="DeathMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 100.0
margin_top = 100.0
margin_right = -100.0
margin_bottom = -100.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 824.0
margin_bottom = 653.0
custom_constants/separation = 200

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 824.0
margin_bottom = 93.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 1, 0, 0, 1 )
text = "James Strachan's
Honours PRoject"
align = 1
uppercase = true

[node name="ScoreAndEnemyCount" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 293.0
margin_right = 824.0
margin_bottom = 415.0
custom_constants/separation = 50

[node name="Score" type="HBoxContainer" parent="MarginContainer/VBoxContainer/ScoreAndEnemyCount"]
margin_right = 824.0
margin_bottom = 36.0
custom_constants/separation = 100
alignment = 1

[node name="ScoreTitle" type="Label" parent="MarginContainer/VBoxContainer/ScoreAndEnemyCount/Score"]
margin_left = 132.0
margin_right = 312.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 1, 0, 0, 1 )
text = "Score"
uppercase = true

[node name="Colon" type="Label" parent="MarginContainer/VBoxContainer/ScoreAndEnemyCount/Score"]
margin_left = 412.0
margin_right = 448.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 1, 0, 0, 1 )
text = ":"
align = 1

[node name="ScoreNumber" type="Label" parent="MarginContainer/VBoxContainer/ScoreAndEnemyCount/Score"]
margin_left = 548.0
margin_right = 692.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 1, 0, 0, 1 )
text = "1000"

[node name="NoOfEnemies" type="HBoxContainer" parent="MarginContainer/VBoxContainer/ScoreAndEnemyCount"]
margin_top = 86.0
margin_right = 824.0
margin_bottom = 122.0
custom_constants/separation = 100
alignment = 1

[node name="NoOfEnemiesTitle" type="Label" parent="MarginContainer/VBoxContainer/ScoreAndEnemyCount/NoOfEnemies"]
margin_left = 6.0
margin_right = 510.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 1, 0, 0, 1 )
text = "No. Of enemies"
uppercase = true

[node name="Colon" type="Label" parent="MarginContainer/VBoxContainer/ScoreAndEnemyCount/NoOfEnemies"]
margin_left = 610.0
margin_right = 646.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 1, 0, 0, 1 )
text = ":"
align = 1

[node name="NoOfEnemiesNumber" type="Label" parent="MarginContainer/VBoxContainer/ScoreAndEnemyCount/NoOfEnemies"]
margin_left = 746.0
margin_right = 818.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 1, 0, 0, 1 )
text = "20"

[node name="RestartButton" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 615.0
margin_right = 824.0
margin_bottom = 653.0
size_flags_horizontal = 5
custom_fonts/font = SubResource( 4 )
custom_colors/font_color_disabled = Color( 0.333333, 0.313726, 0.313726, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 0.298039, 0.298039, 1 )
custom_colors/font_color_pressed = Color( 1, 0, 0, 1 )
text = "RESTART"
flat = true

[connection signal="pressed" from="MarginContainer/VBoxContainer/RestartButton" to="." method="_on_Button_pressed"]
